src/styles.css
@import "./assets/styles/material-custom.css";
@import "./assets/styles/3rdParty/bootstrap.css";
@import "./assets/styles/3rdParty/bootstrap-theme.css";


html {
    height: 100%;
}

body {
    /* The only way to make the #footer work as expected */
    min-height: 100%;
    padding-bottom: 30px;
}

html, body {
    position: relative;
    background-color: rgb(246, 246, 246);
    font-family: consolas,"Liberation Mono",courier,monospace;
    font-size: .92rem;
    color: #5B6A72;
}

.error {
    color: red;
}

.green {
    color: #46B446;
}
.red {
    color: #ED8117;
}

/* For pages Overview and My Exchanges */
div.exchanges-frame {
    padding-left: 12px;
    padding-right: 12px;
}

div.exchange-link {
    cursor: pointer;
    border: 2px solid #8396a0;
}
div.exchange-link:hover {
    border: 2px solid #4d81b0;
}
div.exchange-link div.lastPrice {
    flex: 0 0 auto;
    padding-left: 10px;
    font-size: 1.7em;
    font-weight: bold;
}
div.exchange-link div.dailyChangePercent {
    font-size: 1.7em;
    padding-left: 10px;
    padding-right: 10px;
}
div.exchange-link div.assetsDescription {
    display:flex;
    border-bottom: 1px solid #5B6A72;
    background-color: white;
}
div.exchange-link div.baseAssetDesc {
    flex:1 1 auto;
    text-align: right;
    padding-right: 3px;
    line-height: 10px;
    padding-top: 10px;
}
div.exchange-link div.counterAssetDesc {
    flex: 1 1 auto;
    padding-left: 5px;
    line-height: 10px;
    padding-top: 10px;
}
div.exchange-link div.baseAssetDesc span.baseAssetCode, div.exchange-link div.counterAssetDesc span.counterAssetCode {
    font-size: 1.7em;
    font-weight: bold;
}
div.exchange-link div.baseAssetDesc span.baseAssetIssuer, div.exchange-link div.counterAssetDesc span.counterAssetIssuer {
    font-size: 0.8em;
}
div.exchange-link span.slash {
    font-size: 2.1em;
    font-weight: bold;
}
div.exchange-link-chart {
    display: table;
    min-height: 300px;
    height: 100%;
    width: 100%;
}
/**************************************/

/** This is sad but the only way we can affect the Material SELECT styling being baked in deeply in the component */
div.mat-select-panel {
    max-height: none;
}

